Job offer Done Except Dept Head

--- a/Delmon Managment System/JobOfferRPT.rdlc
+++ b/Delmon Managment System/JobOfferRPT.rdlc
@@ -414,7 +414,7 @@
             <Top>2in</Top>
             <Left>0.06139in</Left>
             <Height>0.25in</Height>
-            <Width>2.47917in</Width>
+            <Width>2.47916in</Width>
             <ZIndex>10</ZIndex>
             <Style>
               <Border>
@@ -435,7 +435,7 @@
         </Style>
       </Rectangle>
     </ReportItems>
-    <Height>14.5609cm</Height>
+    <Height>14.8875cm</Height>
     <Style>
       <Border>
         <Style>None</Style>
@@ -933,8 +933,8 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>FullName</rd:DefaultName>
-              <Top>1.63542in</Top>
-              <Left>2.87278in</Left>
+              <Top>1.62164in</Top>
+              <Left>2.90055in</Left>
               <Height>0.25in</Height>
               <Width>2.29166in</Width>
               <ZIndex>4</ZIndex>
@@ -975,8 +975,8 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>FullName</rd:DefaultName>
-              <Top>1.20833in</Top>
-              <Left>2.87278in</Left>
+              <Top>1.11469in</Top>
+              <Left>2.90055in</Left>
               <Height>0.25in</Height>
               <Width>2.29167in</Width>
               <ZIndex>6</ZIndex>
@@ -1002,39 +1002,21 @@
                 </Border>
               </Style>
             </Line>
-            <Textbox Name="FullName4">
-              <CanGrow>true</CanGrow>
-              <KeepTogether>true</KeepTogether>
-              <Paragraphs>
-                <Paragraph>
-                  <TextRuns>
-                    <TextRun>
-                      <Value>=First(Fields!FullName.Value, "DataSet1")</Value>
-                      <Style />
-                    </TextRun>
-                  </TextRuns>
-                  <Style />
-                </Paragraph>
-              </Paragraphs>
-              <rd:DefaultName>FullName</rd:DefaultName>
-              <Top>0.6875in</Top>
-              <Left>2.87278in</Left>
-              <Height>0.25in</Height>
-              <Width>2.29166in</Width>
-              <ZIndex>8</ZIndex>
-              <Style>
-                <Border>
-                  <Style>None</Style>
-                </Border>
-                <PaddingLeft>2pt</PaddingLeft>
-                <PaddingRight>2pt</PaddingRight>
-                <PaddingTop>2pt</PaddingTop>
-                <PaddingBottom>2pt</PaddingBottom>
-              </Style>
-            </Textbox>
             <Line Name="Line3">
               <Top>0.9375in</Top>
               <Left>5.2339in</Left>
+              <Height>0in</Height>
+              <Width>1.3827in</Width>
+              <ZIndex>8</ZIndex>
+              <Style>
+                <Border>
+                  <Style>Solid</Style>
+                </Border>
+              </Style>
+            </Line>
+            <Line Name="Line4">
+              <Top>0.36458in</Top>
+              <Left>5.23389in</Left>
               <Height>0in</Height>
               <Width>1.3827in</Width>
               <ZIndex>9</ZIndex>
@@ -1044,25 +1026,25 @@
                 </Border>
               </Style>
             </Line>
-            <Textbox Name="FullName5">
+            <Textbox Name="Textbox16">
               <CanGrow>true</CanGrow>
               <KeepTogether>true</KeepTogether>
               <Paragraphs>
                 <Paragraph>
                   <TextRuns>
                     <TextRun>
-                      <Value>=First(Fields!FullName.Value, "DataSet1")</Value>
+                      <Value>Saleem Qaid Mohamed Nasser</Value>
                       <Style />
                     </TextRun>
                   </TextRuns>
                   <Style />
                 </Paragraph>
               </Paragraphs>
-              <rd:DefaultName>FullName</rd:DefaultName>
-              <Top>0.11458in</Top>
-              <Left>2.87278in</Left>
-              <Height>0.25in</Height>
-              <Width>2.29167in</Width>
+              <rd:DefaultName>Textbox16</rd:DefaultName>
+              <Top>0.32603cm</Top>
+              <Left>7.40269cm</Left>
+              <Height>0.6cm</Height>
+              <Width>5.25919cm</Width>
               <ZIndex>10</ZIndex>
               <Style>
                 <Border>
@@ -1074,18 +1056,36 @@
                 <PaddingBottom>2pt</PaddingBottom>
               </Style>
             </Textbox>
-            <Line Name="Line4">
-              <Top>0.36458in</Top>
-              <Left>5.23389in</Left>
-              <Height>0in</Height>
-              <Width>1.3827in</Width>
+            <Textbox Name="Textbox17">
+              <CanGrow>true</CanGrow>
+              <KeepTogether>true</KeepTogether>
+              <Paragraphs>
+                <Paragraph>
+                  <TextRuns>
+                    <TextRun>
+                      <Value>Hassan Kamil</Value>
+                      <Style />
+                    </TextRun>
+                  </TextRuns>
+                  <Style />
+                </Paragraph>
+              </Paragraphs>
+              <rd:DefaultName>Textbox16</rd:DefaultName>
+              <Top>1.57868cm</Top>
+              <Left>7.40269cm</Left>
+              <Height>0.6cm</Height>
+              <Width>4.85479cm</Width>
               <ZIndex>11</ZIndex>
               <Style>
                 <Border>
-                  <Style>Solid</Style>
+                  <Style>None</Style>
                 </Border>
+                <PaddingLeft>2pt</PaddingLeft>
+                <PaddingRight>2pt</PaddingRight>
+                <PaddingTop>2pt</PaddingTop>
+                <PaddingBottom>2pt</PaddingBottom>
               </Style>
-            </Line>
+            </Textbox>
           </ReportItems>
           <KeepTogether>true</KeepTogether>
           <Top>0.06944in</Top>
