Visa Request query Done

--- a/Delmon Managment System/JobOfferRPT.rdlc
+++ b/Delmon Managment System/JobOfferRPT.rdlc
@@ -971,7 +971,7 @@
                 <Paragraph>
                   <TextRuns>
                     <TextRun>
-                      <Value>Saleem Qaid Mohamed Nasser</Value>
+                      <Value>Saleem Nasser</Value>
                       <Style />
                     </TextRun>
                   </TextRuns>
