--- a/Delmon Managment System/VisaRequest.rdlc
+++ b/Delmon Managment System/VisaRequest.rdlc
@@ -123,7 +123,6 @@
               <PaddingBottom>2pt</PaddingBottom>
             </Style>
           </Textbox>
-        
           <Textbox Name="Textbox9">
             <CanGrow>true</CanGrow>
             <KeepTogether>true</KeepTogether>
@@ -143,7 +142,7 @@
             <Left>0.15403in</Left>
             <Height>0.25in</Height>
             <Width>1.38542in</Width>
-            <ZIndex>5</ZIndex>
+            <ZIndex>4</ZIndex>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -173,7 +172,7 @@
             <Left>0.15403in</Left>
             <Height>0.25in</Height>
             <Width>1.38542in</Width>
-            <ZIndex>6</ZIndex>
+            <ZIndex>5</ZIndex>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -202,8 +201,8 @@
             <Top>0.10417in</Top>
             <Left>1.61931in</Left>
             <Height>0.25in</Height>
-            <Width>2.82292in</Width>
-            <ZIndex>7</ZIndex>
+            <Width>2.02084in</Width>
+            <ZIndex>6</ZIndex>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -233,7 +232,7 @@
             <Left>1.61931in</Left>
             <Height>0.25in</Height>
             <Width>2.82292in</Width>
-            <ZIndex>8</ZIndex>
+            <ZIndex>7</ZIndex>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -263,7 +262,7 @@
             <Left>1.61931in</Left>
             <Height>0.25in</Height>
             <Width>2.82292in</Width>
-            <ZIndex>9</ZIndex>
+            <ZIndex>8</ZIndex>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -293,7 +292,7 @@
             <Left>1.61931in</Left>
             <Height>0.25in</Height>
             <Width>2.82292in</Width>
-            <ZIndex>10</ZIndex>
+            <ZIndex>9</ZIndex>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -323,6 +322,36 @@
             <Left>1.61931in</Left>
             <Height>0.25in</Height>
             <Width>2.82292in</Width>
+            <ZIndex>10</ZIndex>
+            <Style>
+              <Border>
+                <Style>None</Style>
+              </Border>
+              <PaddingLeft>2pt</PaddingLeft>
+              <PaddingRight>2pt</PaddingRight>
+              <PaddingTop>2pt</PaddingTop>
+              <PaddingBottom>2pt</PaddingBottom>
+            </Style>
+          </Textbox>
+          <Textbox Name="COMPName_EN">
+            <CanGrow>true</CanGrow>
+            <KeepTogether>true</KeepTogether>
+            <Paragraphs>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value>=First(Fields!COMPName_EN.Value, "DataSet3")</Value>
+                    <Style />
+                  </TextRun>
+                </TextRuns>
+                <Style />
+              </Paragraph>
+            </Paragraphs>
+            <rd:DefaultName>COMPName_EN</rd:DefaultName>
+            <Top>0.47917in</Top>
+            <Left>1.61931in</Left>
+            <Height>0.25in</Height>
+            <Width>2.79639in</Width>
             <ZIndex>11</ZIndex>
             <Style>
               <Border>
@@ -342,7 +371,7 @@
         <Width>6.91667in</Width>
         <Style>
           <Border>
-            <Style>None</Style>
+            <Style>Solid</Style>
           </Border>
         </Style>
       </Rectangle>
@@ -596,7 +625,7 @@
         <ZIndex>1</ZIndex>
         <Style>
           <Border>
-            <Style>None</Style>
+            <Style>Solid</Style>
           </Border>
         </Style>
       </Rectangle>
@@ -737,7 +766,7 @@
               <Top>0.59375in</Top>
               <Left>5.14063in</Left>
               <Height>0.25in</Height>
-              <Width>0.46875in</Width>
+              <Width>0.51042in</Width>
               <ZIndex>1</ZIndex>
               <Style>
                 <Border>
@@ -812,6 +841,39 @@
                 <PaddingBottom>2pt</PaddingBottom>
               </Style>
             </Textbox>
+            <Textbox Name="FileNumber">
+              <CanGrow>true</CanGrow>
+              <KeepTogether>true</KeepTogether>
+              <Paragraphs>
+                <Paragraph>
+                  <TextRuns>
+                    <TextRun>
+                      <Value>=Sum(Fields!FileNumber.Value, "DataSet3")</Value>
+                      <Style>
+                        <FontWeight>Bold</FontWeight>
+                        <Color>Brown</Color>
+                      </Style>
+                    </TextRun>
+                  </TextRuns>
+                  <Style />
+                </Paragraph>
+              </Paragraphs>
+              <rd:DefaultName>FileNumber</rd:DefaultName>
+              <Top>0.59375in</Top>
+              <Left>5.72049in</Left>
+              <Height>0.25in</Height>
+              <Width>1in</Width>
+              <ZIndex>4</ZIndex>
+              <Style>
+                <Border>
+                  <Style>None</Style>
+                </Border>
+                <PaddingLeft>2pt</PaddingLeft>
+                <PaddingRight>2pt</PaddingRight>
+                <PaddingTop>2pt</PaddingTop>
+                <PaddingBottom>2pt</PaddingBottom>
+              </Style>
+            </Textbox>
           </ReportItems>
           <KeepTogether>true</KeepTogether>
           <Top>0.7175in</Top>
@@ -821,7 +883,7 @@
           <ZIndex>3</ZIndex>
           <Style>
             <Border>
-              <Style>None</Style>
+              <Style>Solid</Style>
             </Border>
           </Style>
         </Rectangle>
@@ -1287,7 +1349,7 @@
           <Width>6.91667in</Width>
           <Style>
             <Border>
-              <Style>None</Style>
+              <Style>Solid</Style>
             </Border>
           </Style>
         </Rectangle>
