--- a/Delmon Managment System/JobOfferRPT.rdlc
+++ b/Delmon Managment System/JobOfferRPT.rdlc
@@ -244,6 +244,7 @@
                     <Value>=First(Fields!JobTitleEN.Value, "DataSet1")</Value>
                     <Style>
                       <FontFamily>Calibri</FontFamily>
+                      <FontSize>12pt</FontSize>
                     </Style>
                   </TextRun>
                 </TextRuns>
@@ -448,7 +449,7 @@
         </ReportItems>
         <KeepTogether>true</KeepTogether>
         <Top>0.19792in</Top>
-        <Left>0.11347in</Left>
+        <Left>0.12278in</Left>
         <Height>4.79515in</Height>
         <Width>6.78327in</Width>
         <Style>
@@ -458,14 +459,14 @@
         </Style>
       </Rectangle>
     </ReportItems>
-    <Height>14.8875cm</Height>
+    <Height>13.29094cm</Height>
     <Style>
       <Border>
         <Style>None</Style>
       </Border>
     </Style>
   </Body>
-  <Width>20.7248cm</Width>
+  <Width>20.74845cm</Width>
   <Page>
     <PageHeader>
       <Height>5.89703cm</Height>
@@ -477,7 +478,7 @@
           <Value>Delmonlogo</Value>
           <Sizing>FitProportional</Sizing>
           <Top>0.01389in</Top>
-          <Left>0.11347in</Left>
+          <Left>0.12278in</Left>
           <Height>0.73958in</Height>
           <Width>0.91792in</Width>
           <Style>
@@ -506,7 +507,7 @@
           </Paragraphs>
           <rd:DefaultName>Textbox1</rd:DefaultName>
           <Top>0.01389in</Top>
-          <Left>1.05917in</Left>
+          <Left>1.06848in</Left>
           <Height>0.3693in</Height>
           <Width>3.14187in</Width>
           <ZIndex>1</ZIndex>
@@ -539,7 +540,7 @@
           </Paragraphs>
           <rd:DefaultName>Textbox1</rd:DefaultName>
           <Top>0.4943in</Top>
-          <Left>1.08694in</Left>
+          <Left>1.09625in</Left>
           <Height>0.25917in</Height>
           <Width>2.01042in</Width>
           <ZIndex>2</ZIndex>
@@ -576,9 +577,9 @@
               </Paragraphs>
               <rd:DefaultName>Textbox1</rd:DefaultName>
               <Top>0.0925in</Top>
-              <Left>1.235in</Left>
+              <Left>0.22632in</Left>
               <Height>0.41361in</Height>
-              <Width>3.58333in</Width>
+              <Width>5.95548in</Width>
               <Style>
                 <Border />
                 <BackgroundColor>LightGrey</BackgroundColor>
@@ -803,8 +804,8 @@
             </Textbox>
           </ReportItems>
           <KeepTogether>true</KeepTogether>
-          <Top>0.80903in</Top>
-          <Left>0.11347in</Left>
+          <Top>1.11469in</Top>
+          <Left>0.12278in</Left>
           <Height>0.99875in</Height>
           <Width>6.72188in</Width>
           <ZIndex>3</ZIndex>
@@ -822,7 +823,7 @@
       </Style>
     </PageHeader>
     <PageFooter>
-      <Height>6.0325cm</Height>
+      <Height>6.32354cm</Height>
       <PrintOnFirstPage>true</PrintOnFirstPage>
       <PrintOnLastPage>true</PrintOnLastPage>
       <ReportItems>
@@ -848,7 +849,7 @@
               <Top>0.11458in</Top>
               <Left>0.12278in</Left>
               <Height>0.25in</Height>
-              <Width>2.72222in</Width>
+              <Width>2.44209in</Width>
               <Style>
                 <Border>
                   <Style>None</Style>
@@ -879,7 +880,7 @@
               <Top>0.6875in</Top>
               <Left>0.12278in</Left>
               <Height>0.25in</Height>
-              <Width>2.47917in</Width>
+              <Width>2.03125in</Width>
               <ZIndex>1</ZIndex>
               <Style>
                 <Border />
@@ -909,7 +910,7 @@
               <Top>1.67708in</Top>
               <Left>0.12278in</Left>
               <Height>0.25in</Height>
-              <Width>1.70313in</Width>
+              <Width>1.44083in</Width>
               <ZIndex>2</ZIndex>
               <Style>
                 <Border>
@@ -939,8 +940,8 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>FullName</rd:DefaultName>
-              <Top>1.62164in</Top>
-              <Left>2.90055in</Left>
+              <Top>1.6633in</Top>
+              <Left>2.57875in</Left>
               <Height>0.25in</Height>
               <Width>2.29166in</Width>
               <ZIndex>3</ZIndex>
@@ -956,7 +957,7 @@
             </Textbox>
             <Line Name="Line1">
               <Top>1.88542in</Top>
-              <Left>5.23389in</Left>
+              <Left>5.12043in</Left>
               <Height>0in</Height>
               <Width>1.3827in</Width>
               <ZIndex>4</ZIndex>
@@ -967,8 +968,8 @@
               </Style>
             </Line>
             <Line Name="Line2">
-              <Top>1.45833in</Top>
-              <Left>5.2339in</Left>
+              <Top>1.43077in</Top>
+              <Left>5.12043in</Left>
               <Height>0in</Height>
               <Width>1.3827in</Width>
               <ZIndex>5</ZIndex>
@@ -979,8 +980,8 @@
               </Style>
             </Line>
             <Line Name="Line3">
-              <Top>0.9375in</Top>
-              <Left>5.2339in</Left>
+              <Top>0.84397in</Top>
+              <Left>5.12043in</Left>
               <Height>0in</Height>
               <Width>1.3827in</Width>
               <ZIndex>6</ZIndex>
@@ -992,7 +993,7 @@
             </Line>
             <Line Name="Line4">
               <Top>0.36458in</Top>
-              <Left>5.23389in</Left>
+              <Left>5.12043in</Left>
               <Height>0in</Height>
               <Width>1.3827in</Width>
               <ZIndex>7</ZIndex>
@@ -1020,8 +1021,8 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox16</rd:DefaultName>
-              <Top>0.32603cm</Top>
-              <Left>7.40269cm</Left>
+              <Top>0.29103cm</Top>
+              <Left>6.58532cm</Left>
               <Height>0.6cm</Height>
               <Width>5.78552cm</Width>
               <ZIndex>8</ZIndex>
@@ -1053,8 +1054,8 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox16</rd:DefaultName>
-              <Top>1.57868cm</Top>
-              <Left>7.40269cm</Left>
+              <Top>1.54368cm</Top>
+              <Left>6.58532cm</Left>
               <Height>0.6cm</Height>
               <Width>5.78552cm</Width>
               <ZIndex>9</ZIndex>
@@ -1086,8 +1087,8 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox18</rd:DefaultName>
-              <Top>3.06916cm</Top>
-              <Left>7.40269cm</Left>
+              <Top>3.03416cm</Top>
+              <Left>6.58532cm</Left>
               <Height>0.6cm</Height>
               <Width>5.78552cm</Width>
               <ZIndex>10</ZIndex>
@@ -1121,7 +1122,7 @@
               <Top>1.20833in</Top>
               <Left>0.12278in</Left>
               <Height>0.25in</Height>
-              <Width>2.47917in</Width>
+              <Width>2.03125in</Width>
               <ZIndex>11</ZIndex>
               <Style>
                 <Border>
@@ -1135,8 +1136,8 @@
             </Textbox>
           </ReportItems>
           <KeepTogether>true</KeepTogether>
-          <Top>0.06944in</Top>
-          <Left>0.06139in</Left>
+          <Top>0.11979in</Top>
+          <Left>0.12278in</Left>
           <Height>2.13542in</Height>
           <Width>6.83535in</Width>
           <Style>
